# tcc2012-mlp-mpi-cuda

./: .cproject  .project  CMakeLists.txt  ParallelMLP.doxyfile  Parallel_MLP.doxyfile  ProjectHome.md  SETUP.txt
cmake/Modules/: FindPqxx.cmake
data/: iris_big.arff  xor2.arff
include/: Common.h
include/arff/: Attribute.h  DataSet.h  DataTypes.h  Driver.h  ParseException.h  Relation.h  Scanner.h  Value.h
include/database/: BackpropMLPAdapter.h  Connection.h  DatabaseException.h  ExampleSetAdapter.h  Inserter.h  MLPHelper.h  RelationAdapter.h
include/exception/: ParallelMLPException.h
include/mlp/: BackpropMLP.h  ExampleSet.h  Layer.h  LearningRate.h  MLPerceptron.h  Neuron.h  Settings.h  Types.h  Vector.h
include/mlp/activation/: ActivationFunc.h  HyperbolicFunc.h  StepFunc.h
include/mlp/common/: Chronometer.h  ExampleSet.h  Layer.h  MLP.h  OutLayer.h
include/mlp/cuda/: CUDATypes.h  DeviceExampleSet.h  DeviceLayer.h  DeviceMLP.h  DeviceOutLayer.h
include/mlp/layer/: HiddenLayer.h  Layer.h
include/mlp/mpi/: BalanceInfo.h  RemoteExampleSet.h  RemoteLayer.h  RemoteMLP.h  RemoteOutLayer.h  RemoteUtils.h
include/mlp/serial/: BackpropMLP.h  HostExampleSet.h  HostLayer.h  HostMLP.h  HostNeuron.h  HostOutLayer.h  Layer.h
include/types/: Matrix.h  Vector.h
src/: CMakeLists.txt  CUDAMain.cpp  Copy of Main.cpp  DataMain.cpp  MLPMain.cpp  MPIMain.cpp  Main.cpp  Main2.cpp  SerialMain.cpp
src/arff/: Attribute.cpp  CMakeLists.txt  DataSet.cpp  Driver.cpp  ParseException.cpp  Parser.y  Relation.cpp  Scanner.cpp  Scanner.l  Value.cpp
src/database/: BackpropMLPAdapter.cpp  CMakeLists.txt  Connection.cpp  DatabaseException.cpp  ExampleSetAdapter.cpp  Inserter.cpp  RelationAdapter.cpp  RelationHelper.cpp
src/exception/: CMakeLists.txt  ParallelMLPException.cpp
src/mlp/: BackpropMLP.cpp  CMakeLists.txt  ExampleSet.cpp  InputSet.cpp  Layer.cpp  LearningRate.cpp  MLP_BP.cpp  MLPerceptron.cpp
src/mlp/activation/: ActivationFunc.cpp  HyperbolicFunc.cpp  HyperbolicFunction.cpp  LogisticFunc.cpp  LogisticFunction.cpp
src/mlp/common/: CMakeLists.txt  ExampleSet.cpp  ExampleSet.cu  Layer.cpp  MLP.cpp  Neuron.cpp  OutLayer.cpp
src/mlp/cuda/: CMakeLists.txt  DeviceExampleSet.cu  DeviceLayer.cu  DeviceMLP.cpp  DeviceMLP.cu  DeviceOutLayer.cu
src/mlp/layer/: HiddenLayer.cpp  Layer.cpp  OutputLayer.cpp
src/mlp/mpi/: BalanceInfo.cpp  CMakeLists.txt  RemoteExampleSet.cpp  RemoteLayer.cpp  RemoteMLP.cpp  RemoteOutLayer.cpp
src/mlp/serial/: CMakeLists.txt  HostExampleSet.cpp  HostLayer.cpp  HostMLP.cpp  HostNeuron.cpp  HostOutLayer.cpp  Layer.cpp
trunk/: .cproject  CMakeLists.txt  Parallel_MLP.doxyfile  SETUP.txt  exec_serial.sh
trunk/cmake/Modules/: FindThrust.cmake
trunk/data/: iris_comp.arff
trunk/include/: Defines.h
trunk/include/arff/: Attribute.h  DataSet.h  DataTypes.h  Driver.h  ParseException.h  Relation.h  Scanner.h  Value.h
trunk/include/database/: BackpropMLPAdapter.h  Connection.h  DatabaseException.h  ExampleSetAdapter.h  MLPAdapter.h  MLPHelper.h  RelationAdapter.h  RelationHelper.h
trunk/include/exception/: ParallelMLPException.h
trunk/include/mlp/: BackpropMLP.h  ExampleSet.h  InputSet.h  Layer.h  LearningRate.h  MLP_BP.h  Neuron.h  Types.h  Vector.h
trunk/include/mlp/activation/: ActivationFunc.h  ActivationFunction.h  HyperbolicFunc.h  HyperbolicFunction.h  LinearFunc.h  LogisticFunc.h  LogisticFunction.h
trunk/include/mlp/common/: ExampleSet.h  Indexes.h  Layer.h  MLP.h  Neuron.h  OutLayer.h
trunk/include/mlp/cuda/: CUDATypes.h  DeviceExampleSet.h  DeviceLayer.h  DeviceMLP.h  DeviceOutLayer.h
trunk/include/mlp/layer/: Layer.h  OutputLayer.h
trunk/include/mlp/mpi/: RemoteExampleSet.h  RemoteLayer.h  RemoteMLP.h  RemoteOutLayer.h
trunk/include/mlp/serial/: HostExampleSet.h  HostLayer.h  HostMLP.h  HostOutLayer.h  Neuron.h
trunk/src/: CUDAMain.cpp  MLPMain.cpp  Main.cpp  SerialMain.cpp
trunk/src/arff/: Attribute.cpp  CMakeLists.txt  DataSet.cpp  DataTypes.cpp  Driver.cpp  ParseException.cpp  Parser.y  Relation.cpp  Scanner.cpp  Scanner.l  Value.cpp
trunk/src/database/: BackpropMLPAdapter.cpp  CMakeLists.txt  Connection.cpp  DatabaseException.cpp  ExampleSetAdapter.cpp  Inserter.cpp  MLPAdapter.cpp  MLPHelper.cpp  RelationAdapter.cpp
trunk/src/mlp/: BackpropMLP.cpp  CMakeLists.txt  ExampleSet.cpp  InputSet.cpp  Layer.cpp  LearningRate.cpp  MLPerceptron.cpp  Neuron.cpp  Settings.cpp
trunk/src/mlp/activation/: ActivationFunc.cpp  ActivationFunction.cpp  LinearFunc.cpp  StepFunc.cpp
trunk/src/mlp/common/: CMakeLists.txt  Chronometer.cpp  ExampleSet.cpp  Indexes.cpp  Layer.cpp  MLP.cpp  OutLayer.cpp
trunk/src/mlp/cuda/: CMakeLists.txt  DeviceExampleSet.cu  DeviceLayer.cu  DeviceMLP.cpp  DeviceMLP.cu  DeviceOutLayer.cu
trunk/src/mlp/layer/: HiddenLayer.cpp  OutputLayer.cpp
trunk/src/mlp/mpi/: CMakeLists.txt  RemoteExampleSet.cpp  RemoteLayer.cpp  RemoteMLP.cpp  RemoteUtils.cpp
trunk/src/mlp/serial/: BackpropMLP.cpp  CMakeLists.txt  HostExampleSet.cpp  HostLayer.cpp  HostMLP.cpp  HostOutLayer.cpp  Neuron.cpp
