CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(ParallelMLP)

SET(CMAKE_CXX_FLAGS "-O2 -std=c++0x")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

FIND_PACKAGE(FLEX)
FIND_PACKAGE(BISON)
FIND_PACKAGE(Pqxx)
FIND_PACKAGE(CUDA)

ADD_SUBDIRECTORY(arff)
ADD_SUBDIRECTORY(database)
ADD_SUBDIRECTORY(mlp)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/src/arff)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/src/database)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/src/mlp)

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

ADD_EXECUTABLE(pmlp MLPMain.cpp)
TARGET_LINK_LIBRARIES(pmlp arff database mlp)

ADD_EXECUTABLE(data DataMain.cpp)
TARGET_LINK_LIBRARIES(data arff database mlp)
