CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules)
SET(CMAKE_CXX_FLAGS "-O2 -std=c++0x ${OpenMP_CXX_FLAGS}")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(src/arff)
ADD_SUBDIRECTORY(src/database)
ADD_SUBDIRECTORY(src/mlp)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/src/arff)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/src/database)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/src/mlp)

ADD_EXECUTABLE(pmlp ${CMAKE_SOURCE_DIR}/src/MLPMain.cpp)
TARGET_LINK_LIBRARIES(pmlp arff database mlp)

ADD_EXECUTABLE(data ${CMAKE_SOURCE_DIR}/src/DataMain.cpp)
TARGET_LINK_LIBRARIES(data arff database mlp)
