CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(ParallelMLP)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules)
SET(CMAKE_CXX_FLAGS "-O2 -std=c++0x")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)
FIND_PACKAGE(CUDA REQUIRED)
FIND_PACKAGE(MPI REQUIRED)

ADD_SUBDIRECTORY(src)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/src/arff)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/src/database)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/src/mlp)

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

ADD_EXECUTABLE(pmlp src/Main.cpp)
TARGET_LINK_LIBRARIES(pmlp arff exception mlp)
