CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(FLEX)
FIND_PACKAGE(BISON)

BISON_TARGET(PARSER Parser.y ${CMAKE_CURRENT_BINARY_DIR}/Parser.cc)
FLEX_TARGET(SCANNER Scanner.l ${CMAKE_CURRENT_BINARY_DIR}/Scanner.cc)
ADD_FLEX_BISON_DEPENDENCY(SCANNER PARSER)

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src)

ADD_LIBRARY(arff Attribute.cpp Driver.cpp ParseException.cpp Relation.cpp
	Scanner.cpp Value.cpp ${BISON_PARSER_OUTPUTS} ${FLEX_SCANNER_OUTPUTS})
