CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(ParallelMLP)

SET(BISON_SOURCES
	Parser.y
)

SET(FLEX_SOURCES
	Scanner.l
)

SET(SOURCES
	Attribute.cpp
	Driver.cpp
	Relation.cpp
	Scanner.cpp
	Value.cpp
)

BISON_TARGET(PARSER ${BISON_SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/Parser.cc)
FLEX_TARGET(SCANNER ${FLEX_SOURCES} ${CMAKE_CURRENT_BINARY_DIR}/Scanner.cc)
ADD_FLEX_BISON_DEPENDENCY(SCANNER PARSER)

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src)
ADD_LIBRARY(arff ${SOURCES} ${BISON_PARSER_OUTPUTS} ${FLEX_SCANNER_OUTPUTS})
