CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(ParallelMLP)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(cuda)
ADD_SUBDIRECTORY(mpi)
ADD_SUBDIRECTORY(serial)

FILE(WRITE ${CMAKE_BINARY_DIR}/dummy.cpp "")

ADD_LIBRARY(mlp ${CMAKE_BINARY_DIR}/dummy.cpp)
TARGET_LINK_LIBRARIES(mlp mlp_serial mlp_cuda mlp_mpi)
