CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(ParallelMLP)

SET(SOURCES
	DeviceExampleSet.cu
)

SET(CMAKE_CXX_FLAGS "-O2")
SET(CUDA_NVCC_FLAGS)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/src/mlp/common)

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})
CUDA_ADD_LIBRARY(mlp_cuda ${SOURCES})
TARGET_LINK_LIBRARIES(mlp_cuda mlp_common ${CUDA_LIBRARIES})
